Closed
Bug 444963
Opened 17 years ago
Closed 17 years ago
Java hangs browser
Categories
(Core Graveyard :: Java: Live Connect, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9.1a1
People
(Reporter: phiw2, Assigned: jst)
References
()
Details
(4 keywords)
Attachments
(2 files)
|
4.54 KB,
text/plain
|
Details | |
|
752 bytes,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
Spin-off from bug 435334. See bug 435334 comment 68 in particular.
Java applets hang the browser requires a force quit.
Flags: blocking1.9.1?
Updated•17 years ago
|
Comment 1•17 years ago
|
||
During testing of Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a1) Gecko/2008072306 Shiretoko/3.1a1 I have hit this bug a few times. A very bad user experience even for an alpha in my opinion. Sample site I hit: http://bseindia.com/
Comment 2•17 years ago
|
||
Johnny, looks like a regression from your work. I hope it's ok to assign this bug to you.
Assignee: nobody → jst
Keywords: hang
Comment 3•17 years ago
|
||
can we list a regression range here? This would be blocking 3.1alpha 1 release if so.
Comment 4•17 years ago
|
||
My flight goes tomorrow. So I'm not able to do this until the summit. If anyone else has the time to find the regression range it would be great.
Comment 5•17 years ago
|
||
Here is the regression range:
Works: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a1pre) Gecko/2008071105 Minefield/3.1a1pre
Broke: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a1pre) Gecko/2008071202 Minefield/3.1a1pre
Updated•17 years ago
|
Target Milestone: --- → mozilla1.9.1a1
Comment 6•17 years ago
|
||
Using Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en-US; rv:1.9.1a1) Gecko/2008072306 Shiretoko/3.1a1, if I type about:plugins in the URL bar this also freezes the browser and causes me to force quit. This may be PPC only as stephend was not able to reproduce on an Intel box.
| Assignee | ||
Comment 7•17 years ago
|
||
Java on the Mac won't work in Firefox 3.1 due to the fact that there's no NPRuntime enabled Java plugin available for the mac yet (Sun's working on that). I really don't know the first thing about why this would hang on the Mac, but it probably has something to do with the fact that OJI and LiveConnect are both disabled, and the Java plugin on the Mac depends on them still.
For Beta1 we'll have to re-enable OJI/LiveConnect (and we were going to for alpha too but it didn't make it in time, obviously).
Steven, this is more up your alley, but I don't think there's enough time to deal with this in time for alpha. Feel free to prove me wrong.
Marcia, when you say in your regression range that a build from 2008071105 "worked", do you mean Java actually loaded (it's not supposed to AFAIK), or that it just didn't hang?
Comment 8•17 years ago
|
||
jst: In Comment 5 I meant I did not get the hang on the build on July 11th, but I do on the build from July 12th.
Updated•17 years ago
|
Whiteboard: [need regression range]
Comment 9•17 years ago
|
||
Here's a trace of the hang. The JEP is waiting for the JVM to finish
loading ... which it will never do with OJI absent/disabled.
The puzzle is that the browser is still trying to use OJI to
instantiate the JEP. Stop that from happening and you'll get rid of
the hang.
Java won't work (of course). And OJI (and LiveConnect) do need to be
re-enabled on mozilla-central before the 3.1 beta. But the trace
should make it easier to find a quick hack to stop the hang.
Johnny? :-)
| Assignee | ||
Comment 10•17 years ago
|
||
| Assignee | ||
Comment 11•17 years ago
|
||
Comment on attachment 331312 [details] [diff] [review]
Possible hackaround.
According to peterv this patch does fix the hang so that's a possible quick fix for alpha 1, but whether it's worth the extra time for builds or not is questionable to me, given how rare applets are nowadays.
Attachment #331312 -
Flags: superreview?(peterv)
Attachment #331312 -
Flags: review?(peterv)
Updated•17 years ago
|
Attachment #331312 -
Flags: superreview?(peterv)
Attachment #331312 -
Flags: superreview+
Attachment #331312 -
Flags: review?(peterv)
Attachment #331312 -
Flags: review+
Comment 12•17 years ago
|
||
> given how rare applets are nowadays.
But some people have seen the hang using about:plugins.
Comment 13•17 years ago
|
||
If the patch is low risk (seems localized to OJI/OSX by my reading) then I think we should take it and respin. A lot of photo-VRs and Ogg Video embeds use Java based players, and the crash/hang is a pretty bad experience as it requires a force-quit.
I'll co-ordinate with build to figure out how to get the manual respin done. In the meantime, this should land on nightlies ASAP.
Flags: blocking1.9.1? → blocking1.9.1+
Comment 14•17 years ago
|
||
Comment on attachment 331312 [details] [diff] [review]
Possible hackaround.
Mossop just landed this for me on our release branch and merged it back to tip, too. This should be in the nightlies now, too.
Comment 15•17 years ago
|
||
Using Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; en-US; rv:1.9.1a1) Gecko/2008072510 Shiretoko/3.1a1, which is the build with jst's patch, I no longer see the hang in about:plugins on PPC.
Comment 16•17 years ago
|
||
Using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a1) Gecko/2008072510 Shiretoko/3.1a1 as well as the equivalent Tiger build, I am not able to reproduce the hang on the sites noted in this bug. Will continue verification but so far things look good with the patch.
Comment 17•17 years ago
|
||
For the record, I tested the same build as Marcia (on OS X 10.5.4
Intel) with one of Sun's JDK demo applets, and got the same results --
the applet didn't load, but no hang.
http://java.sun.com/applets/jdk/1.4/demo/applets/Clock/example1.html
Comment 18•17 years ago
|
||
verifying this bug fixed on the 1.9.1a1 release branch. Hasham and I have visited a number of sites that use java and java applets and have not experienced any hangs.
I assume we will still release note the fact that Mac users will not be able to see Java content.
| Assignee | ||
Comment 19•17 years ago
|
||
Yes, that should be relnoted.
| Assignee | ||
Comment 20•17 years ago
|
||
Marking bug FIXED.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 21•17 years ago
|
||
Marking verified based on former comments and my tests with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a2pre) Gecko/2008072702 Minefield/3.1a2pre ID:2008072702. Everything works fine now and the browser doesn't hang anymore.
Status: RESOLVED → VERIFIED
Keywords: qawanted
Updated•17 years ago
|
Component: Plug-ins → Java: Live Connect
QA Contact: plugins → live-connect
Updated•16 years ago
|
Keywords: fixed1.9.1
Updated•16 years ago
|
Keywords: verified1.9.1
Updated•16 years ago
|
Keywords: fixed1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•