Bug 444963: Java hangs browser. Release branch landing. r+sr=peterv